off screen fix. on sellerorderindex

--- a/public/css/order.css
+++ b/public/css/order.css
@@ -12,6 +12,7 @@ h1{
 
 .back-row{
     margin-top:7px;
+    margin-right: 0px;
 }
 
 #go-back{
